--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <div class="what_we_do_section_item_text">
 <h3>无懈可击的售后管理</h3>
 <p>
-使用节点出现任何问题，可免费更换，简单易用。
+使用节点出现任何问题，可免费更换，简单易用，专属一对一人工客服。
 </p>
 </div>
 </div>
