--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 </div>
 <ul class="menu_items">
 <li><a href="https://su.c66.tw/"><span>首页</span></a></li>
-<li><a href="https://su.c66.tw/index.html"><span>服务器</span> <i class="fa fa-caret-down"></i></a>
+<li><a href="https://su.c66.tw/index.html"><span>节点服务器</span> <i class="fa fa-caret-down"></i></a>
 <ul>
-<li><a href="https://su.c66.tw/cart.php?gid=4">洛杉矶CN2 GIA KVM虚拟服务器</a></li>
-<li><a href="https://su.c66.tw/cart.php?gid=1">洛杉矶CN2 GT OpenVZ虚拟服务器</a></li>
-<li><a href="https://su.c66.tw/cart.php?gid=3">洛杉矶CN2 GIA OpenVZ虚拟服务器</a></li>
-<li><a href="https://su.c66.tw/cart.php?gid=2">新加坡OpenVZ虚拟服务器</a></li>
+<li><a href="https://su.c66.tw/cart.php?gid=4">洛杉矶节点</a></li>
+<li><a href="https://su.c66.tw/cart.php?gid=1">新加坡节点</a></li>
+<li><a href="https://su.c66.tw/cart.php?gid=3">日本节点（售空）</a></li>
+<li><a href="https://su.c66.tw/cart.php?gid=2">香港节点（售空）</a></li>
 </ul>
 </li>
 
-<li class="special_menu"><a href="https://su.c66.tw/clientarea.php"><span>在线购买</span></a></li>
+<li class="special_menu"><a href="http://wpa.qq.com/msgrd?v=3&uin=2423458887&site=qq&menu=yes"><span>人工购买</span></a></li>
 
 </ul>
 </nav>
@@ -166,7 +166,7 @@
 <li><img src="./index_files/ddos_protection.png" alt=""> 200Mbps 带宽</li>
 </ul>
 <div class="see_more">
-<a href="https://su.c66.tw/cart.php?gid=1">查看更多</a>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=2423458887&site=qq&menu=yes">查看更多</a>
 </div>
 <div class="some_message">
 * 价格可能随库存情况变动<br>
@@ -196,7 +196,7 @@
 <li><img src="./index_files/ddos_protection.png" alt=""> 500Mbps 带宽</li>
 </ul>
 <div class="see_more">
-<a href="https://su.c66.tw/cart.php?gid=1">查看更多</a>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=2423458887&site=qq&menu=yes">查看更多</a>
 </div>
 <div class="some_message">
 * 价格可能随库存情况变动<br>
@@ -226,7 +226,7 @@
 <li><img src="./index_files/ddos_protection.png" alt=""> 1000Mbps 带宽</li>
 </ul>
 <div class="see_more">
-<a href="https://su.c66.tw/cart.php?gid=2">查看更多</a>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=2423458887&site=qq&menu=yes">查看更多</a>
 </div>
 <div class="some_message">
 * 价格可能随库存情况变动<br>
