--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
 <div class="footer_main_container">
 <div class="footer_bottom">
 <p class="foo_links">
-<a href="https://su.c66.tw/index.php?rp=/announcements/1/TOS.html">服务条款</a> |
-<a href="https://su.c66.tw/index.php?rp=/announcements/2/AUP.html">可接受使用政策</a>
+<a href="#">服务条款</a> |
+<a href="#">可接受使用政策</a>
 </p>
 <p class="foo_copyright">
 Copyright © 2017
